deployments/default/traefik/forward-auth-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth2-forward-auth
  namespace: default
spec:
  forwardAuth:
    address: http://oauth2-proxy/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders: 
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - Set-Cookie
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth2-signin
  namespace: default
spec:
  errors:
    service: 
      name: oauth2-proxy
      port: 80
    status: 
      - 401
    query: /oauth2/sign_in
---
